--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
     crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
-  <title>Bootstrap Theme</title>
+  <title>LoopLAB</title>
 </head>
 
 <body>
@@ -23,7 +23,7 @@
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a href="#home" class="nav-link">Home</a>
+            <a href="#home-section" class="nav-link">Home</a>
           </li>
           <li class="nav-item">
             <a href="#explore-head-section" class="nav-link">Explore</a>
@@ -108,8 +108,8 @@
       <div class="row">
         <div class="col text-center py-5">
           <h1 class="display-4">Explore</h1>
-          <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium facere eaque neque distinctio error, deleniti
-            cupiditate soluta perspiciatis vel deserunt.</p>
+          <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium facere eaque neque distinctio
+            error, deleniti cupiditate soluta perspiciatis vel deserunt.</p>
           <a href="#" class="btn btn-outline-secondary">Find Out More</a>
         </div>
       </div>
@@ -125,6 +125,98 @@
         </div>
         <div class="col-md-6">
           <h3>Explore & Connect</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus animi porro incidunt in quae quasi fugit aliquam
+            dignissimos sit facere?</p>
+          <div class="d-flex">
+            <div class="p-4 align-self-start">
+              <i class="fas fa-check fa-2x"></i>
+            </div>
+            <div class="p-4 align-self-end">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum reprehenderit distinctio corrupti, nisi et officia!
+            </div>
+          </div>
+          <div class="d-flex">
+            <div class="p-4 align-self-start">
+              <i class="fas fa-check fa-2x"></i>
+            </div>
+            <div class="p-4 align-self-end">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum reprehenderit distinctio corrupti, nisi et officia!
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- CREATE HEADER -->
+  <section id="create-head-section" class="bg-primary">
+    <div class="container">
+      <div class="row">
+        <div class="col text-center py-5">
+          <h1 class="display-4">Create</h1>
+          <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium facere eaque neque distinctio
+            error, deleniti cupiditate soluta perspiciatis vel deserunt.</p>
+          <a href="#" class="btn btn-outline-light">Find Out More</a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- CREATE SECTION -->
+  <section id="create-section" class="py-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 order-2">
+          <img src="img/create-section1.jpg" alt="" class="img-fluid mb-3 rounded-circle">
+        </div>
+        <div class="col-md-6 order-1">
+          <h3>Create Your Passion</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus animi porro incidunt in quae quasi fugit aliquam
+            dignissimos sit facere?</p>
+          <div class="d-flex">
+            <div class="p-4 align-self-start">
+              <i class="fas fa-check fa-2x"></i>
+            </div>
+            <div class="p-4 align-self-end">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum reprehenderit distinctio corrupti, nisi et officia!
+            </div>
+          </div>
+          <div class="d-flex">
+            <div class="p-4 align-self-start">
+              <i class="fas fa-check fa-2x"></i>
+            </div>
+            <div class="p-4 align-self-end">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum reprehenderit distinctio corrupti, nisi et officia!
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- SHARE HEADER -->
+  <section id="share-head-section" class="bg-primary">
+    <div class="container">
+      <div class="row">
+        <div class="col text-center py-5">
+          <h1 class="display-4">Share</h1>
+          <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium facere eaque neque distinctio
+            error, deleniti cupiditate soluta perspiciatis vel deserunt.</p>
+          <a href="#" class="btn btn-outline-light">Find Out More</a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- SHARE SECTION -->
+  <section id="share-section" class="bg-light text-muted py-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <img src="img/share-section1.jpg" alt="" class="img-fluid mb-3 rounded-circle">
+        </div>
+        <div class="col-md-6">
+          <h3>Share What You Create</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus animi porro incidunt in quae quasi fugit aliquam
             dignissimos sit facere?</p>
           <div class="d-flex">
