--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <title>LoopLAB</title>
 </head>
 
-<body>
-  <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+<body data-spy="scroll" data-target="#main-nav" id="home">
+  <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top" id="main-nav">
     <div class="container">
       <a href="index.html" class="navbar-brand">LoopLAB</a>
       <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
@@ -108,8 +108,8 @@
       <div class="row">
         <div class="col text-center py-5">
           <h1 class="display-4">Explore</h1>
-          <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium facere eaque neque distinctio
-            error, deleniti cupiditate soluta perspiciatis vel deserunt.</p>
+          <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium facere eaque neque distinctio error, deleniti
+            cupiditate soluta perspiciatis vel deserunt.</p>
           <a href="#" class="btn btn-outline-secondary">Find Out More</a>
         </div>
       </div>
@@ -154,8 +154,8 @@
       <div class="row">
         <div class="col text-center py-5">
           <h1 class="display-4">Create</h1>
-          <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium facere eaque neque distinctio
-            error, deleniti cupiditate soluta perspiciatis vel deserunt.</p>
+          <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium facere eaque neque distinctio error, deleniti
+            cupiditate soluta perspiciatis vel deserunt.</p>
           <a href="#" class="btn btn-outline-light">Find Out More</a>
         </div>
       </div>
@@ -200,8 +200,8 @@
       <div class="row">
         <div class="col text-center py-5">
           <h1 class="display-4">Share</h1>
-          <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium facere eaque neque distinctio
-            error, deleniti cupiditate soluta perspiciatis vel deserunt.</p>
+          <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium facere eaque neque distinctio error, deleniti
+            cupiditate soluta perspiciatis vel deserunt.</p>
           <a href="#" class="btn btn-outline-light">Find Out More</a>
         </div>
       </div>
@@ -240,6 +240,56 @@
     </div>
   </section>
 
+  <!-- FOOTER -->
+  <footer id="main-footer" class="bg-dark">
+    <div class="container">
+      <div class="row">
+        <div class="col text-center py-4">
+          <h3>LoopLAB</h3>
+          <p>Copyright &copy;
+            <span id="year"></span>
+          </p>
+          <button class="btn btn-primary" data-toggle="modal" data-target="#contactModal">
+            Contact Us
+          </button>
+        </div>
+      </div>
+    </div>
+  </footer>
+
+  <!-- CONTACT MODAL -->
+  <div class="modal fade text-dark" id="contactModal">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Contact Us</h5>
+          <button class="close" data-dismiss="modal">
+            <span>&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <form>
+            <div class="form-group">
+              <label for="name">Name</label>
+              <input type="text" class="form-control">
+            </div>
+            <div class="form-group">
+              <label for="email">Email</label>
+              <input type="email" class="form-control">
+            </div>
+            <div class="form-group">
+              <label for="message">Message</label>
+              <textarea class="form-control"></textarea>
+            </div>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button class="btn btn-primary btn-block">Submit</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
@@ -249,7 +299,33 @@
 </body>
 
 <script>
-  //$('#year').text(new Date().getFullYear());
+  $('#year').text(new Date().getFullYear());
+
+  //Initializy Scrollspy
+  $('body').scrollspy({
+    target: '#main-nav'
+  });
+
+  // Add smooth scrolling
+  $('#main-nav a').on('click', function (e) {
+    // Check for a hash value
+    if (this.hash !== '') {
+      // Prevent deafult behavior
+      e.preventDefault();
+
+      // Store hash
+      const hash = this.hash;
+
+      // Animate smooth scroll
+      $('html, body').animate({
+        scrollTop: $(hash).offset().top
+      }, 900, () => {
+
+        // Add hash to URL after scroll
+        window.location.hash = hash;
+      });
+    }
+  });
 </script>
 
 </html>
